tests/knowledge/testing-accounts-data/account-data-ec2-classic-platform/test/us-west-2/ec2-describe-route-tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-e9191094",
                    "RouteTableId": "rtb-fad4fc81"
                }
            ],
            "OwnerId": "111111111111",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-fad4fc81",
            "Routes": [
                {
                    "DestinationCidrBlock": "172.31.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-8e6dddf7",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-bbf2bdc3"
        }
    ]
}
